v0.0.1/modules/schema/pages/class/LoadGenericNonLinear.adoc
= `LoadGenericNonLinear`
:toclevels: 4


+++Generic non-linear dynamic (GNLD) load. This model can be used in mid-term and long-term voltage stability simulations (i.e., to study voltage collapse), as it can replace a more detailed representation of aggregate load, including induction motors, thermostatically controlled and static loads.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LoadGenericNonLinear`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/LoadDynamics.adoc[`LoadDynamics`]
*** *`LoadGenericNonLinear`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
LoadGenericNonLinear {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}







EnergyConsumer {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}






LoadGenericNonLinear -> EnergyConsumer: EnergyConsumer


LoadGenericNonLinear -> DiagramObject: DiagramObjects


LoadGenericNonLinear -> InstanceSet: InstanceSet


LoadGenericNonLinear -> Name: Names


LoadGenericNonLinear -> ChangeSetMember: PropertiesCIMDataObject


LoadGenericNonLinear -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<bs,`bs`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Steady state voltage index for reactive power (<i>BS</i>).+++

| <<bt,`bt`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Transient voltage index for reactive power (<i>BT</i>).+++

| <<genericNonLinearLoadModelType,`genericNonLinearLoadModelType`>>
| 0..1
| xref::enumeration/GenericNonLinearLoadModelKind.adoc[`GenericNonLinearLoadModelKind`]
| +++Type of generic non-linear load model.+++

| <<ls,`ls`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Steady state voltage index for active power (<i>LS</i>).+++

| <<lt,`lt`>>
| 0..1
| https://w3id.org/linkml/Float[`float`]
| +++Transient voltage index for active power (<i>LT</i>).+++

| <<tp,`tp`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of lag function of active power (<i>T</i><i><sub>P</sub></i>) (&gt; 0).+++

| <<tq,`tq`>>
| 0..1
| xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of lag function of reactive power (<i>T</i><i><sub>Q</sub></i>) (&gt; 0).+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<EnergyConsumer,`EnergyConsumer`>>
| 0..*
| xref::class/EnergyConsumer.adoc[`EnergyConsumer`]
| +++Energy consumer to which this dynamics load model applies.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#bs]
=== `bs`
+++Steady state voltage index for reactive power (<i>BS</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.bs`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#bt]
=== `bt`
+++Transient voltage index for reactive power (<i>BT</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.bt`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#EnergyConsumer]
=== `EnergyConsumer`
+++Energy consumer to which this dynamics load model applies.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadDynamics.EnergyConsumer`
| Cardinality
| 0..*
| Type
| xref::class/EnergyConsumer.adoc[`EnergyConsumer`]

| Inherited from
| xref::class/LoadDynamics.adoc[`LoadDynamics`]


|===

//[discrete]
[#genericNonLinearLoadModelType]
=== `genericNonLinearLoadModelType`
+++Type of generic non-linear load model.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.genericNonLinearLoadModelType`
| Cardinality
| 0..1
| Type
| xref::enumeration/GenericNonLinearLoadModelKind.adoc[`GenericNonLinearLoadModelKind`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#ls]
=== `ls`
+++Steady state voltage index for active power (<i>LS</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.ls`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#lt]
=== `lt`
+++Transient voltage index for active power (<i>LT</i>).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.lt`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#tp]
=== `tp`
+++Time constant of lag function of active power (<i>T</i><i><sub>P</sub></i>) (&gt; 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.tp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

//[discrete]
[#tq]
=== `tq`
+++Time constant of lag function of reactive power (<i>T</i><i><sub>Q</sub></i>) (&gt; 0).+++

[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.tq`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===


