v1.1.0/modules/schema/pages/class/LoadGenericNonLinear.adoc
= `LoadGenericNonLinear`
:toclevels: 4


+++Generic non-linear dynamic (GNLD) load. This model can be used in mid-term and long-term voltage stability simulations (i.e., to study voltage collapse), as it can replace a more detailed representation of aggregate load, including induction motors, thermostatically controlled and static loads.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:LoadGenericNonLinear`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/LoadDynamics.adoc[`LoadDynamics`]
*** *`LoadGenericNonLinear`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<bs,`bs`>>
//| [[slots_table.bs]]<<bs,`bs`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Steady state voltage index for reactive power (<i>BS</i>).+++
| _n/a_

| <<bt,`bt`>>
//| [[slots_table.bt]]<<bt,`bt`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Transient voltage index for reactive power (<i>BT</i>).+++
| _n/a_

| <<genericNonLinearLoadModelType,`genericNonLinearLoadModelType`>>
//| [[slots_table.genericNonLinearLoadModelType]]<<genericNonLinearLoadModelType,`genericNonLinearLoadModelType`>>
| 0..1 +
xref::enumeration/GenericNonLinearLoadModelKind.adoc[`GenericNonLinearLoadModelKind`]
| +++Type of generic non-linear load model.+++
| _n/a_

| <<ls,`ls`>>
//| [[slots_table.ls]]<<ls,`ls`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Steady state voltage index for active power (<i>LS</i>).+++
| _n/a_

| <<lt,`lt`>>
//| [[slots_table.lt]]<<lt,`lt`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Transient voltage index for active power (<i>LT</i>).+++
| _n/a_

| <<tp,`tp`>>
//| [[slots_table.tp]]<<tp,`tp`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of lag function of active power (<i>T</i><i><sub>P</sub></i>) (&gt; 0).+++
| _n/a_

| <<tq,`tq`>>
//| [[slots_table.tq]]<<tq,`tq`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Time constant of lag function of reactive power (<i>T</i><i><sub>Q</sub></i>) (&gt; 0).+++
| _n/a_

| <<EnergyConsumer,`EnergyConsumer`>>
//| [[slots_table.EnergyConsumer]]<<EnergyConsumer,`EnergyConsumer`>>
| 0..* +
xref::class/EnergyConsumer.adoc[`EnergyConsumer`]
| +++Energy consumer to which this dynamics load model applies.+++
| xref::class/LoadDynamics.adoc[`LoadDynamics`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#bs]
=== `bs`
+++Steady state voltage index for reactive power (<i>BS</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.bs`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.bs,&#10548;>>
--
////


//[discrete]
[#bt]
=== `bt`
+++Transient voltage index for reactive power (<i>BT</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.bt`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.bt,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#EnergyConsumer]
=== `EnergyConsumer`
+++Energy consumer to which this dynamics load model applies.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadDynamics.EnergyConsumer`
| Cardinality
| 0..*
| Type
| xref::class/EnergyConsumer.adoc[`EnergyConsumer`]

| Inherited from
| xref::class/LoadDynamics.adoc[`LoadDynamics`]


|===

////
[.text-left]
--
<<slots_table.EnergyConsumer,&#10548;>>
--
////


//[discrete]
[#genericNonLinearLoadModelType]
=== `genericNonLinearLoadModelType`
+++Type of generic non-linear load model.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.genericNonLinearLoadModelType`
| Cardinality
| 0..1
| Type
| xref::enumeration/GenericNonLinearLoadModelKind.adoc[`GenericNonLinearLoadModelKind`]


|===

////
[.text-left]
--
<<slots_table.genericNonLinearLoadModelType,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#ls]
=== `ls`
+++Steady state voltage index for active power (<i>LS</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.ls`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.ls,&#10548;>>
--
////


//[discrete]
[#lt]
=== `lt`
+++Transient voltage index for active power (<i>LT</i>).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.lt`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.lt,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tp]
=== `tp`
+++Time constant of lag function of active power (<i>T</i><i><sub>P</sub></i>) (&gt; 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.tp`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tp,&#10548;>>
--
////


//[discrete]
[#tq]
=== `tq`
+++Time constant of lag function of reactive power (<i>T</i><i><sub>Q</sub></i>) (&gt; 0).+++


[cols="h,4",width=65%]
|===
| URI
| `cim:LoadGenericNonLinear.tq`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tq,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
